--- a/03.FUNCIONES.md
+++ b/03.FUNCIONES.md
@@ -108,6 +108,19 @@ setTimeout ( suma    // función a ejecutar
 
 # Parámetros y argumentos
 
+```js
+// Parámetros: a, b
+// Tambien llamados párametros formales
+function suma (a, b) {
+  return a + b;
+}
+
+let x=3, y=5;
+// Argumentos: x, y 
+// Tambien llamados párametros reales
+suma (x, y);
+```
+
 Javascript es un lenguaje que realiza comprobaciones menos estrictas que otros lenguajes. Esto puede a veces provocar errores en programadores que no conocen bien el lenguaje.
 
 **Los parámetros no exigen un tipo a los argumentos**
@@ -155,6 +168,45 @@ suma ('Esto ', 'es ', 'una ', 'prueba.');  // Devuelve '0Esto es una prueba.'
 
 
 
+## Paso por valor y Paso por referencia
+
+Los argumentos de una función pueden pasarse de dos maneras:
+
+**Paso por valor**
+
+- Se hace una copia del valor de la variable pasada a la función.
+- La función no puede modificar el valor de la variable original.
+- **Se usa con tipos de datos básicos.**
+
+```js
+let a = 1
+
+function f1 ( num ) {
+  num++;
+  console.log ( num )   
+}
+
+f (a)   // 2
+a       // 1  // No se modifica el valor de la variable original
+```
+
+**Paso por referencia**
+
+- No se hace copia del valor de la variable pasada a la función. Lo que se copia es la referencia o dirección de memoria donde se almacenan los datos.
+- La funcion puede modificar el valor de la variable original.
+- **Se usa con arrays, objetos y funciones.**
+
+```js
+const b = [ 1, 2 ]   
+
+function f2 ( array ) {
+  array[0]++
+  console.log( array )
+}
+
+f2 ( b )  // [ 2, 2 ]  
+b         // [ 2, 2 ]  // Se modifica el valor de la variable original
+```
 
 # Ejecución asíncrona
 
