--- a/05.OBJETOS.md
+++ b/05.OBJETOS.md
@@ -357,10 +357,25 @@ copia_profunda.direccion.calle = "ancha";
 persona.direccion.calle;      // "antigua"; 
 ```
 
-> **NOTA:**
+> **RESUMEN:**
 >
 > - **`JSON.stringify()`** convierte un `Objeto Javascript` a `String`
 > - **`JSON.parse()`** convierte un `String` a `Objeto Javascript`.
+
+> **NOTA:**
+>
+> JSON es un formato de intercambio de datos que está estándarizado y que tiene las siguientes características:
+> - Tanto las claves como los valores deben estar entre comillas dobles, no se permiten comillas simples.
+> - Los valores de tipo *number* y de tipo *boolean* no llevan comillas
+> - No se permite el uso de *trailing commas* (comas finales)
+> - No se permite el uso de comentarios 
+>
+> Estas características a menudo son percibidas como limitaciones. Por ello existen existen formatos derivados de JSON con menores restricciones. Por ejemplo, **VSCode** usa archivos de configuración con extensión `.json`, pero el formato real es **JSONC** (JSON con Comentarios), que permite comentarios y comas finales.
+>
+> Otro formato derivado de JSON es **[JSON5](https://json5.org)** 
+>
+> Ni JSONC ni JSON5 están estándarizados.
+
 
 ### Serialización
 
