--- a/05.OBJETOS.md
+++ b/05.OBJETOS.md
@@ -370,7 +370,7 @@ persona.direccion.calle;      // "antigua";
 > - No se permite el uso de *trailing commas* (comas finales)
 > - No se permite el uso de comentarios 
 >
-> Estas características a menudo son percibidas como limitaciones. Por ello existen existen formatos derivados de JSON con menores restricciones. Por ejemplo, **VSCode** usa archivos de configuración con extensión `.json`, pero el formato real es **JSONC** (JSON con Comentarios), que permite comentarios y comas finales.
+> Estas características a menudo son percibidas como limitaciones. Por ello existen formatos derivados de JSON con menores restricciones. Por ejemplo, **VSCode** usa archivos de configuración con extensión `.json`, pero el formato real es **JSONC** (JSON con Comentarios), que permite comentarios y comas finales.
 >
 > Otro formato derivado de JSON es **[JSON5](https://json5.org)** 
 >
