--- a/02.SINTAXIS.md
+++ b/02.SINTAXIS.md
@@ -126,6 +126,7 @@ Number(a)
 Number(b)
 String(c)
 ```
+
 > **NOTA**:
 >
 > También existen los tipos `Boolean` y `BigInt`, y algunos más. Para más detalles consultar: https://developer.mozilla.org/es/docs/Web/JavaScript/Data_structures 
@@ -147,6 +148,26 @@ String(c)
 >    c.toString(2);
 >    d.toString(16);
 >```
+
+
+## El método `toFixed()`
+
+Cuando trabajamos con números con decimales, a menudo deseamos quedarnos con sólo algunos decimales. Un método que podemos utilizar para ello es `toFixed()`.
+
+```js
+let a = 4.095001  // number
+
+let b = a.toFixed(2)  // "4.10"  ¡cuidado¡, se ha convertido a string
+```
+
+Este método tiene el efecto colateral de realizar una conversión de `number` a `string`. Sin embargo si deseamos que el valor final sea number podemos usar el [operador unario +](https://developer.mozilla.org/es/docs/Web/JavaScript/Reference/Operators/Unary_plus).
+
+```js
+let a = 4.095001  // number
+
+let b = +a.toFixed(2)  // 4.10  ¡sigue siendo number!
+```
+
 
 ## Operadores
 
@@ -285,11 +306,14 @@ console.log ({ edad, nombre, apellidos})       // Uncaught ReferenceError: apell
 ```
 
 > **Recuerda:**
-> ```
+> 
+> ```js
 > persona = { nombre: nombre, edad: edad }
 > ``` 
+>
 > podemos simplificarlo como
-> ```
+> 
+> ```js
 > persona = { nombre, edad }
 > ```
 
@@ -346,6 +370,8 @@ nums = [0, ...nums, 4];
 numeros = [...numeros, ...otros]; 
 // numeros = numeros.concat(otros);
 ```
+
+
 
 ## Desestructuración (Destructuring)
 
