--- a/02.SINTAXIS.md
+++ b/02.SINTAXIS.md
@@ -372,7 +372,6 @@ numeros = [...numeros, ...otros];
 ```
 
 
-
 ## Desestructuración (Destructuring)
 
 La sintaxis de asignación de desestructuración ( **`[]`**, **`{}`** ) es una expresión de JavaScript que hace posible desempaquetar elementos de arrays o propiedades de objetos en distintas variables. 
@@ -400,6 +399,93 @@ console.log(a); // 10
 console.log(b); // 20
 console.log(rest); // {c: 30, d: 40}
 ```
+
+
+## l-value = r-value
+
+En lenguajes con C/C++, en las operaciones de asignación se suele hablar de 
+
+- `l-value` (left value)
+- `r-value` (right value)
+
+Es la forma de identificar los 2 lados de una **operación de asignación**. Aunque en Javascript no se habla en estos términos, nos puede resultar muy útil para comprender código más avanzado.
+
+Por ejemplo:
+
+```js
+let num
+
+num = 22     
+```
+
+Aquí, el l-value o lado izquiedo es `num`. Y el r-value o lado derecho es el valor `22`. 
+El lado izquierdo debe ser una variable. El lado derecho puede ser una variable o un literal.
+
+¿Por qué te cuento esto? Bien, examina el siguiente código
+
+```js
+const x = [ 1, 2 ]
+const y = [ 3, 4 ]
+const z = [ 5, 6 ]
+const [ a, b, c, d, ...resto ] = [ ...x, 99, ...z, ...y ]
+
+// a = 1
+// b = 2
+// c = 99
+// d = 5
+// resto = [6, 3, 4 ]
+```
+
+Observa la siguiente sentencia:
+
+```js
+const [ a, b, c, d, ...resto ] = [ ...x, 99, ...z, ...y ]
+```
+
+Pues bien, tanto  `...` como `[ ]` se comportan de distinta manera según estén en la lado izquierdo o en lado derecho de la expresión de asignación.
+
+**`[ ]`**
+
+- lado izquierdo: ***desempaqueta*** los valores, es decir desestructuramos.
+- lado derecho: ***empaqueta*** los valores de un array, es decir construimos array.
+
+
+**`...`**
+
+- lado izquierdo: ***empaqueta*** los valores (**parámetros resto**), es decir construimos array con resto de parámetros.
+- lado derecho: ***desempaqueta*** los valores de un array,  es decir esparcimos (spread)
+
+
+> **NOTA:**
+>
+> Los [parámetros resto](https://developer.mozilla.org/es/docs/Web/JavaScript/Reference/Functions/rest_parameters) deben aparecer sólo una vez y hacerlo al final.
+
+
+El asunto de `l-value` y `r-value` no sólo se aplica a la operación de asignación. **También se aplica cuando pasamos argumentos a una función**. En este caso, consideramos como
+
+- `l-value`, a las variables que reciben los argumentos de una función.
+- `r-value`, a las variables o valores que pasamos en la llamada a la función.
+
+Por ejemplo:
+
+```js
+let a  = [ 1, 2 ];
+let b  = [ 3, 4 ]
+let c  = 5
+
+// funcion suma recibe un array
+function suma( [ x, y, z, ...resto ] ) {  // l-value (desestructuración y resto) 
+  let total = x + y + z
+  for (let num of resto) total += num;
+ 
+  console.log ( total );
+}
+
+// a funcion suma le pasamos un array
+suma( [...a, ...b, c ] );                  // r-value (construcción y esparcimiento)
+```
+
+Este ejemplo es un poco enrevesado y no es muy realista, pero muestra el uso de las cuatro operaciones. Además se demuestra que el paso de argumentos a una función, en el fondo, es una operación de asignación.
 
 
 # Declaración de variables
