--- a/01.INTRODUCCION.md
+++ b/01.INTRODUCCION.md
@@ -25,14 +25,15 @@ JavaScript fue inventado por Brendan Eich en 1995, y **se convirtió en un está
 | 2021 | ECMAScript 12   | ES12, ES2021   | String.replaceAll(), Promise.any() 
 | 2022 | ECMAScript 13   | ES13, ES2022   | Top-level await
 | 2023 | ECMAScript 14   | ES14, ES2023   | Array.toSorted, Array.toReversed, Array.findLast, Array.findLastIndex
+| 2024 | ECMAScript 15   | ES15, ES2024   | **Object.groupBy**, Set.union, Set.intersection, Set.difference
 
-De especial importancia es **ES6 o ES2015**.
+
+De especial importancia es **ES6 o ES2015** por establecer las bases del Javascript moderno.
 
 
 
 
 # Referencias
 
-- [Características de ES6 respecto a ES5](https://carlosazaustre.com/ecmascript-6-el-nuevo-estandar-de-javascript/)
 - [Información en Wikipedia - en inglés](https://en.wikipedia.org/wiki/ECMAScript)
 - [Versiones de Javascript](https://www.geeksforgeeks.org/javascript-versions/)
