--- a/01.INTRODUCCION.md
+++ b/01.INTRODUCCION.md
@@ -1,4 +1,11 @@
-# Historia
+# INTRODUCCIÓN <!-- omit in toc -->
+
+- [1. Historia](#1-historia)
+  - [1.1. Ediciones de ECMAScript](#11-ediciones-de-ecmascript)
+- [2. Referencias](#2-referencias)
+
+
+# 1. Historia
 
 **JavaScript y Java son lenguajes completamente diferentes, tanto en concepto como en diseño**.
 
@@ -6,7 +13,7 @@ JavaScript fue inventado por Brendan Eich en 1995, y **se convirtió en un está
 
 **ECMA-262** es el nombre oficial de la norma. ECMAScript es el nombre oficial del lenguaje.
 
-## Ediciones de ECMAScript
+## 1.1. Ediciones de ECMAScript
 
 | Año	 | Nombre          | Otros nombres  | Descripción
 |------|-----------------|----------------|--------------------------------
@@ -33,7 +40,7 @@ De especial importancia es **ES6 o ES2015** por establecer las bases del Javascr
 
 
 
-# Referencias
+# 2. Referencias
 
 - [Información en Wikipedia - en inglés](https://en.wikipedia.org/wiki/ECMAScript)
 - [Versiones de Javascript](https://www.geeksforgeeks.org/javascript-versions/)
