--- a/02.SINTAXIS.md
+++ b/02.SINTAXIS.md
@@ -1,20 +1,92 @@
-# Características
+# SINTAXIS <!-- omit in toc -->
+
+- [1. Características](#1-características)
+- [2. Declaración de variables](#2-declaración-de-variables)
+- [3. Declaración de constantes](#3-declaración-de-constantes)
+- [4. Tipos de datos simples](#4-tipos-de-datos-simples)
+  - [4.1. Texto](#41-texto)
+  - [4.2. Texto Unicode](#42-texto-unicode)
+  - [4.3. Conversión entre texto y números](#43-conversión-entre-texto-y-números)
+  - [4.4. El método `toFixed()`](#44-el-método-tofixed)
+  - [4.5. Operadores](#45-operadores)
+- [5. Tipos de datos compuestos](#5-tipos-de-datos-compuestos)
+  - [5.1. Arrays](#51-arrays)
+    - [5.1.1. Array -\> String](#511-array---string)
+    - [5.1.2. String -\> Array](#512-string---array)
+  - [5.2. Objetos](#52-objetos)
+  - [5.3. Recorrido de arrays y objetos](#53-recorrido-de-arrays-y-objetos)
+  - [5.4. Valores vs Referencias](#54-valores-vs-referencias)
+  - [5.5. Operarador de expansión (spread operator)](#55-operarador-de-expansión-spread-operator)
+  - [5.6. Desestructuración (Destructuring)](#56-desestructuración-destructuring)
+  - [5.7. l-value = r-value](#57-l-value--r-value)
+- [6. const en arrays y objetos](#6-const-en-arrays-y-objetos)
+- [7. Tipos de valores](#7-tipos-de-valores)
+  - [7.1. Falsy](#71-falsy)
+  - [7.2. Nullish](#72-nullish)
+  - [7.3. Truthy](#73-truthy)
+- [8. Referencias](#8-referencias)
+
+
+---
+
+# 1. Características
 
 - lenguaje interpretado
 - lenguaje con tipado dinámico
 - lenguaje multiparadigma:
   - funcional
-  - basado en prototipos
-  - con soporte para objetos
+  - orientado a objetos
 - soporta ejecución asíncrona
 
 
-# Tipos de datos primitivos simples
+
+# 2. Declaración de variables
+
+A partir de ES6 se recomienda utilizar las palabra clave **`let`** en lugar de `var` para la declaración de variables. La razón es que `let` declara la variable en un ámbito de bloque al igual que la mayoría de los lenguajes de programación, lo cual es menos propenso a errores en el momento de la ejecución del código. Por contra, las variables declaradas con `var` siguen existiendo fuera del bloque en el cual fueron declaradas, estando únicamente limitadas en su visibilidad por la función en la que fueron declaradas.
+
+Ejemplo:
+
+```javascript
+var a = 1;
+
+let b = 2;
+```
+
+Ejemplo:
+
+```javascript
+for( var i = 0; i < 2; i++ ) {
+    console.log( i );   // 0, 1
+}
+console.info( i ); // 2. La variable i sigue existiendo.  
+
+
+for ( let j = 0; j < 2; j++ ) {
+    console.log( j );   // 0, 1
+}
+console.log( j ); // ReferenceError: j is not defined
+```
+
+# 3. Declaración de constantes
+
+Desde ES6 también podemos declarar constantes. Un constante es un dato que "*no puede ser modificado en tiempo de ejecución*".
+
+```javascript
+const  a = 10;
+a = 20;        // TypeError: Assignment to constant variable.
+
+
+const b = [1, 2, 3];
+b = [ 1, 4 ];  // Uncaught TypeError: Assignment to constant variable.
+
+```
+
+
+# 4. Tipos de datos simples
 
 - Números: enteros y reales.
 - Texto
 - Booleanos
-- Símbolos (incorporados en ES6)
 
 
 ```javascript
@@ -41,13 +113,10 @@ typeof a;   // boolean
 
 a = "hola mundo";
 typeof a;   // string
-
-a = Symbol('foo');
-typeof a;   // symbol
 ``` 
 
 
-## Texto
+## 4.1. Texto
 
 Existen **3 formas** distintas de expresar un literal de texto:
 
@@ -93,14 +162,15 @@ console.log ( "El cubo de 'x' es\n               " + Math.pow(x,3) + " unidades"
 ```
 
 
-## Texto Unicode
+## 4.2. Texto Unicode
 
-(Por elaborar)
-(https://flaviocopes.com/javascript-unicode) 
-(https://unicode.org/emoji/charts/full-emoji-list.html)
+Algunas referencias:
+
+- [Unicode](https://flaviocopes.com/javascript-unicode) 
+- [Emojis](https://unicode.org/emoji/charts/full-emoji-list.html)
 
 
-## Conversión entre texto y números
+## 4.3. Conversión entre texto y números
 
 ```javascript 
 let a = "12";       // es string
@@ -150,7 +220,7 @@ String(c)
 >```
 
 
-## El método `toFixed()`
+## 4.4. El método `toFixed()`
 
 Cuando trabajamos con números con decimales, a menudo deseamos quedarnos con sólo algunos decimales. Un método que podemos utilizar para ello es `toFixed()`.
 
@@ -169,7 +239,21 @@ let b = +a.toFixed(2)  // 4.10  ¡sigue siendo number!
 ```
 
 
-## Operadores
+## 4.5. Operadores
+
+Existen muchos operadores. Los operadores más comunes son los mismos que los que aparecen en otros lenguages como C, C++, Java:
+
+- Asignación: `=`
+- Aritméticos: `+  - *  /  %`
+- Bits: `>> <<`
+- Relacionales: `==  !=  ===  !==  >  >=  <  <=`
+
+En Javascript existen muchas más operadores, pero por ahora sólo incidiré en el correcto uso de los operadores siguientes:
+
+- Asignación: `=`
+- Igualdad:  `==`
+- Identidad: `===`
+
 
 ```javascript 
 let a = 11;
@@ -180,14 +264,14 @@ a === b;  // false
 ```
 
 
-# Tipos de datos primitivos compuestos
+# 5. Tipos de datos compuestos
 
 - Arrays  `[   ]`
 - Objetos  `{   }`
 
 **Javascript trata a ambos como objetos**.
 
-## Arrays
+## 5.1. Arrays
 
 Colección de valores separados por comas y dentro de corchetes.
 En Javascript, a diferencia de otros lenguajes, los valores no tienen por que ser del mismo tipo.
@@ -215,7 +299,7 @@ a[2]   // true
 for (let i in a)  console.log (i + " ---> " + a[i]);
 ```
 
-### Array ⇄ String
+### 5.1.1. Array -> String
 
 **join**
 
@@ -234,6 +318,8 @@ Si el método join no recibe ningún parámetro entonces la separación se reali
 ['Tierra', 'Mar', 'Aire'].join ();   // "Tierra,Mar,Aire"
 ```
 
+### 5.1.2. String -> Array
+
 **split**
 
 También es frecuente realizar conversiones de un **String a Array**. Para ello se aplica el método **split** al string. Dicho método recibe una cadena de texto como separador.
@@ -251,7 +337,7 @@ Si el método split no recibe ningún parámetro entonces se devuelve un array c
 'Tierra y Mar y Aire'.split ();       // ["Tierra y Mar y Aire"]
 ```
 
-## Objetos
+## 5.2. Objetos
 
 **Colección de clave:valor separados por comas y dentro de llaves**.
 
@@ -317,7 +403,7 @@ console.log ({ edad, nombre, apellidos})       // Uncaught ReferenceError: apell
 > persona = { nombre, edad }
 > ```
 
-## Recorrido de arrays y objetos
+## 5.3. Recorrido de arrays y objetos
 
 En Javascript disponemos del bucle **`for ... in`** que permite recorrer tanto arrays como objetos.
 
@@ -332,8 +418,14 @@ let objeto = { nombre: 'pepe', edad: 22, 'localidad': 'Montilla' }
 for (let propiedad in objeto) console.log( propiedad, objeto[propiedad])
 ```
 
+## 5.4. Valores vs Referencias
 
-## Operarador de expansión (spread operator)
+- Los datos simples (`number`, `string`, `boolean`) son tratados como valores.
+- Los datos compuestos (arrays, objetos) son tratados como referencias.
+
+![valores vs referencias](img/valor-referencia.png)
+
+## 5.5. Operarador de expansión (spread operator)
 
 La sintaxis de propagación ( **`...`** ) permite que un iterable, como una expresión de array o una cadena, se expanda en lugares donde se esperan cero o más argumentos (para llamadas a funciones) o elementos (para literales de array), o que se expanda una expresión de objeto en lugares donde se esperan cero o más pares clave-valor (para objetos literales).
 
@@ -372,7 +464,7 @@ numeros = [...numeros, ...otros];
 ```
 
 
-## Desestructuración (Destructuring)
+## 5.6. Desestructuración (Destructuring)
 
 La sintaxis de asignación de desestructuración ( **`[]`**, **`{}`** ) es una expresión de JavaScript que hace posible desempaquetar elementos de arrays o propiedades de objetos en distintas variables. 
 
@@ -401,7 +493,7 @@ console.log(rest); // {c: 30, d: 40}
 ```
 
 
-## l-value = r-value
+## 5.7. l-value = r-value
 
 En lenguajes con C/C++, en las operaciones de asignación se suele hablar de 
 
@@ -487,39 +579,9 @@ suma( [...a, ...b, c ] );                  // r-value (construcción y esparcimi
 
 Este ejemplo es un poco enrevesado y no es muy realista, pero muestra el uso de las cuatro operaciones. Además se demuestra que el paso de argumentos a una función, en el fondo, es una operación de asignación.
 
+# 6. const en arrays y objetos 
 
-# Declaración de variables
-
-A partir de ES6 se recomienda utilizar las palabra clave **`let`** en lugar de `var` para la declaración de variables. La razón es que `let` declara la variable en un ámbito de bloque al igual que la mayoría de los lenguajes de programación, lo cual es menos propenso a errores en el momento de la ejecución del código. Por contra, las variables declaradas con `var` siguen existiendo fuera del bloque en el cual fueron declaradas, estando únicamente limitadas en su visibilidad por la función en la que fueron declaradas.
-
-
-
-Ejemplo:
-
-```javascript
-for( var i = 0; i < 2; i++ ) {
-    console.log( i );   // 0, 1
-}
-console.info( i ); // 2. La variable i sigue existiendo.  
-
-
-for ( let j = 0; j < 2; j++ ) {
-    console.log( j );   // 0, 1
-}
-console.log( j ); // ReferenceError: j is not defined
-```
-
-# Declaración de Constantes
-
-Desde ES6 también podemos declarar constantes. Un constante es un dato que "*no puede ser modificado en tiempo de ejecución*".
-
-```javascript
-const  a = 10;
-
-a = 20;  // TypeError: Assignment to constant variable.
-```
-
-Sin embargo, en Javascript, **el término _constante_ puede llevar a engaño**. Para datos simples el comportamiento es el indicado anteriormente.
+En arrays y objetos, en Javascript, **el término _constante_ puede llevar a engaño**. Para datos simples el comportamiento es el esperado.
 
 Pero para datos complejos, como arrays y objetos, el significado es ligeramente distinto. Al igual que otros lenguajes, en Javascript cuando trabajamos con arrays y objetos, realmente estamos trabajando con referencias en memoria. **Para arrays y objetos lo que no puede modificarse es la referencia en memoria. Pero SÍ es posible modificar elementos individuales dentro del array u objeto.** 
 
@@ -554,9 +616,9 @@ pepe.nombre = 'Juan';                 // pepe = { nombre: 'Juan', edad: 40 }
 
 ```
 
-# Tipos de valores
+# 7. Tipos de valores
 
-## Falsy
+## 7.1. Falsy
 
 Un valor **`falsy`** es un valor que se considera `falso` cuando se encuentra en un contexto booleano.
 
@@ -582,7 +644,7 @@ null  || undefined    // undefined
 NaN   || 42           // 42
 ```
 
-## Nullish
+## 7.2. Nullish
 
 Un valor **`nullish`** es el valor que forma parte de un subconjunto muy reducido de valores `falsy`. 
 
@@ -602,7 +664,7 @@ false       ?? "texto"     // false
 NaN         ?? "texto"     // NaN
 ```
 
-## Truthy
+## 7.3. Truthy
 
 Un valor **`truthy`** es un valor que se considera `true` cuando se encuentra en un contexto booleano. Todos los valores son verdaderos a menos que se definan como falsos. Es decir, todos los valores son verdaderos excepto false, 0, -0, 0n, "", null, undefined, NaN y document.all
 
@@ -649,7 +711,7 @@ true && "texto" // "texto"
 
 
 
-# Referencias
+# 8. Referencias
 
 - [[en inglés] Objetos](https://www.w3schools.com/js/js_objects.asp)
 
