--- a/03.FUNCIONES.md
+++ b/03.FUNCIONES.md
@@ -1,4 +1,22 @@
-# Definición e invocación 
+# FUNCIONES <!-- omit in toc -->
+
+- [1. Definición e invocación](#1-definición-e-invocación)
+- [2. Funciones anónimas](#2-funciones-anónimas)
+- [3. Formas de ejecutar una función anónima](#3-formas-de-ejecutar-una-función-anónima)
+  - [3.1. Mediante una expresión](#31-mediante-una-expresión)
+  - [3.2. A través de una variable asociada](#32-a-través-de-una-variable-asociada)
+  - [3.3. En un callback](#33-en-un-callback)
+- [4. Parámetros y argumentos](#4-parámetros-y-argumentos)
+  - [4.1. Paso por valor y Paso por referencia](#41-paso-por-valor-y-paso-por-referencia)
+- [5. Ejecución asíncrona](#5-ejecución-asíncrona)
+  - [5.1. Callbacks](#51-callbacks)
+  - [5.2. Promesas](#52-promesas)
+  - [5.3. async / await](#53-async--await)
+- [6. Referencias](#6-referencias)
+
+---
+
+# 1. Definición e invocación 
 
 ```javascript
 function suma (a, b) { return a + b; }     // Declaración o definición
@@ -14,7 +32,7 @@ A tener en cuenta:
 - En la **llamada** a la función indicamos los parámetros reales o **argumentos**. En este caso `2`y `3`.
 
 
-# Funciones anónimas
+# 2. Funciones anónimas
 
 - No tienen nombre, así que **en principio no son invocables**.
 - Suelen utilizarse en circunstancias donde sólo se invoca a dicha función una única vez.
@@ -28,9 +46,9 @@ function (a, b) { return a + b; }  // ¿Cómo hago una llamada a esta función??
 (a, b) => a + b;                   // expresada en forma de función flecha, simplificando return
 ```
 
-# Formas de ejecutar una función anónima
+# 3. Formas de ejecutar una función anónima
 
-## Mediante una expresión
+## 3.1. Mediante una expresión
 
 - Es una forma de declarar e invocar una función, todo en un sólo paso.
 - La declaración de la función se encierra entre paréntesis  `( )`
@@ -40,7 +58,7 @@ function (a, b) { return a + b; }  // ¿Cómo hago una llamada a esta función??
 (function (a, b) { return a + b; })  (2, 3);                 
 ```
 
-## A través de una variable asociada
+## 3.2. A través de una variable asociada
 
 ```javascript
 let suma = function (a, b) { return a + b; } ; // puedo asignarla a una variable
@@ -48,7 +66,7 @@ let suma = function (a, b) { return a + b; } ; // puedo asignarla a una variable
 suma (2, 3);                                   // ahora sí puedo invocar la función a través de la variable asociada
 ```
 
-## En un callback
+## 3.3. En un callback
 
 Un **callback** es una **función que es pasada como argumento a otra función**. Dos funciones muy conocidas en Javascript, que necesitan un callback son:
 
@@ -106,7 +124,7 @@ setTimeout ( suma    // función a ejecutar
 ```
 
 
-# Parámetros y argumentos
+# 4. Parámetros y argumentos
 
 ```js
 // Parámetros: a, b
@@ -168,7 +186,7 @@ suma ('Esto ', 'es ', 'una ', 'prueba.');  // Devuelve '0Esto es una prueba.'
 
 
 
-## Paso por valor y Paso por referencia
+## 4.1. Paso por valor y Paso por referencia
 
 Los argumentos de una función pueden pasarse de dos maneras:
 
@@ -208,7 +226,7 @@ f2 ( b )  // [ 2, 2 ]
 b         // [ 2, 2 ]  // Se modifica el valor de la variable original
 ```
 
-# Ejecución asíncrona
+# 5. Ejecución asíncrona
 
 Utilizada frecuentemente en operaciones de Entrada/Salida:
 
@@ -228,7 +246,7 @@ Existen 3 formas de ejecutar código de forma asíncrona.
 - Promesas
 - async / await
 
-## Callbacks
+## 5.1. Callbacks
 
 Es la forma clásica, todavía ampliamente usada.
 
@@ -332,7 +350,7 @@ setTimeout(function () { console.log('Este es el cuarto mensaje') },  800);
 ```
 
 
-## Promesas
+## 5.2. Promesas
 
 Disponible a partir de ES6 (2015). La estructura del código es más clara que el uso de callbacks.
 
@@ -481,7 +499,7 @@ fetch(URL)
 ```
 
 
-## async / await
+## 5.3. async / await
 
 Disponible a partir de ES7 (2016).
 
@@ -618,7 +636,7 @@ async function mensajes () {
 mensajes()
 ```
 
-# Referencias
+# 6. Referencias
 
 - https://carlosazaustre.es/manejando-la-asincronia-en-javascript/?utm_campaign=Revue%20newsletter&utm_medium=Newsletter&utm_source=Carlos%20Azaustre
 - https://medium.com/front-end-hacking/callbacks-promises-and-async-await-ad4756e01d90
