--- a/04.ARRAYS.md
+++ b/04.ARRAYS.md
@@ -1,4 +1,23 @@
-## Arrays
+# ARRAYS <!-- omit in toc -->
+
+- [1. Introducción](#1-introducción)
+  - [1.1. Propiedades y métodos básicos](#11-propiedades-y-métodos-básicos)
+  - [1.2. Desestructuración](#12-desestructuración)
+  - [1.3. Operador de expansión ...](#13-operador-de-expansión-)
+  - [1.4. Añadir elementos](#14-añadir-elementos)
+  - [1.5. Eliminar elementos](#15-eliminar-elementos)
+  - [1.6. Hacer copia completa o parcial de un array](#16-hacer-copia-completa-o-parcial-de-un-array)
+  - [1.7. Invertir orden de los elementos](#17-invertir-orden-de-los-elementos)
+  - [1.8. Ordenar elementos](#18-ordenar-elementos)
+  - [1.9. Crear elementos](#19-crear-elementos)
+  - [1.10. Encontrar un elemento](#110-encontrar-un-elemento)
+  - [1.11. Tratar los elementos](#111-tratar-los-elementos)
+- [2. Encadenamiento de métodos](#2-encadenamiento-de-métodos)
+  - [2.1. Uso correcto](#21-uso-correcto)
+
+---
+
+# 1. Introducción
 
 ```javascript
 // Declaración de array vacío
@@ -8,7 +27,7 @@ let numeros = [];
 let palabras = ['Esto', 'es', 'una', 'prueba'];
 ```
 
-### Propiedades y métodos básicos
+## 1.1. Propiedades y métodos básicos
 
 ```javascript
 // Propiedades
@@ -30,7 +49,7 @@ palabras.forEach ( function (elemento)  {
 > NOTA: **Los métodos toString y concat no modifican el array original**.
 
 
-### Desestructuración
+## 1.2. Desestructuración
 
 Se representa con **[  ]**, **permite desempacar valores de arrays en distintas variables**.
 
@@ -81,7 +100,7 @@ console.log(b); // 2
 ```
 
 
-### Operador de expansión ...
+## 1.3. Operador de expansión ...
 
 También llamado **spread operator** y representado por 3 puntos **...**, **permite expandir (sacar del array) los elementos**.
 
@@ -122,7 +141,7 @@ arr1 = [...arr1, ...arr2];
 ```
 
 
-### Añadir elementos
+## 1.4. Añadir elementos
 
 - Al final del array:  `push`
 - Al principio del array: `unshift`
@@ -154,7 +173,7 @@ numeros.splice(3, 0, 400, 300, 200);   // [50, 40, 30, 400, 300, 200, 100, 20, 1
 ```
 
 
-### Eliminar elementos
+## 1.5. Eliminar elementos
 
 - Al final del array:  `pop`
 - Al principio del array: `shift`
@@ -183,7 +202,7 @@ let extraido = numeros.splice (2, 3);   // [40, 30, 100, 20, 10, 1, 1, 2, 2 ] , 
 
 
 
-### Hacer copia completa o parcial de un array
+## 1.6. Hacer copia completa o parcial de un array
 
 ```javascript
 // el método slice tiene la siguiente forma:
@@ -212,7 +231,7 @@ let trozo = numeros.slice(1, 3);          // desde elemento segundo hasta el cua
 > - ¿Qué método se utiliza para concatenar 2 arrays? Pon un ejemplo.
 
 
-### Invertir orden de los elementos
+## 1.7. Invertir orden de los elementos
 
 ```javascript
 let numeros = [ 2, 20, 2, 1, 10, 1, 100 ];
@@ -227,7 +246,7 @@ numeros.reverse();       // [100, 1, 10, 1, 2, 20, 2]
 
 
 
-### Ordenar elementos
+## 1.8. Ordenar elementos
 
 ```javascript
 let numeros = [ 2, 20, 2, 1, 10, 1, 100 ];
@@ -281,7 +300,7 @@ numeros.reverse();                    // [20, 2, 2, 100, 10, 1, 1]
 
 
 
-### Crear elementos
+## 1.9. Crear elementos
 
 Javascript dispone del método **[Array.from](https://developer.mozilla.org/es/docs/Web/JavaScript/Reference/Global_Objects/Array/from)** que puede resultar muy útil en ciertos momentos, sobre todo si necesitamos crear arrays con un gran número de elementos.
 
@@ -307,7 +326,7 @@ Array.from({ length: 100 }, () => ({
 }))
 ``` 
 
-### Encontrar un elemento
+## 1.10. Encontrar un elemento
 
 Si deseamos buscar un elemento en un array, el siguiente método resulta de gran utilidad:
 
@@ -343,7 +362,7 @@ desarrolladores.find( desarrollador => desarrollador.id == 7 );
 > valorResultado  = array.reduce ( /* función que ejecuta operación sobre cada elemento */) 
 > ```
 
-### Tratar los elementos
+## 1.11. Tratar los elementos
 
 Tres métodos muy interesantes para trabajar con arrays, son:
 
@@ -393,7 +412,7 @@ suma = numeros.reduce ( (acumulador, item) => acumulador + item,  0);
  
 
 
-## Encadenamiento de métodos
+# 2. Encadenamiento de métodos
 
 El encadenamiento de métodos es una técnica donde aplicamos a un objeto un método. A su vez al objeto resultante se le aplica otro método. Y así sucesivamente. Nos ahorramos así la declaración de objetos intermedios y el código se simplifica.
 
@@ -469,7 +488,7 @@ El encadenamiento de métodos es una técnica que podemos utilizar siempre que s
 > - En lugar de calcular la suma de edades de los desarrolladores web, ¿cómo calcularíamos la media de edad de los desarrolladores web? 
 
 
-### Uso correcto
+## 2.1. Uso correcto
 
 Tanto el método `map` como el método `filter`, éste último en menor medida, se usan de forma bastante frecuente en Javascript.
 A la hora de usarlos debemos hacerlo de forma correcta. Debemos tener en cuenta que:
