--- a/06.EVENTOS.md
+++ b/06.EVENTOS.md
@@ -1,4 +1,12 @@
-# Eventos
+# EVENTOS <!-- omit in toc -->
+
+- [1. Introducción](#1-introducción)
+- [2. Resumen](#2-resumen)
+
+---
+
+
+# 1. Introducción
 
 En Javascript existen 3 formas de gestionar los eventos. De menos a más recomendada tenemos:
 
@@ -133,7 +141,7 @@ enlace.addEventListener('click', function (event) {
 
 
 
-## Resumen
+# 2. Resumen
 
 La primera forma está desaconsejada, prácticamente está obsoleta.
 
