--- a/07.AJAX.md
+++ b/07.AJAX.md
@@ -1,4 +1,15 @@
-# AJAX (Asynchronous JavaScript And XML)
+# AJAX (Asynchronous JavaScript And XML) <!-- omit in toc -->
+
+- [1. Introducción](#1-introducción)
+- [2. XMLHttpRequest](#2-xmlhttprequest)
+- [3. XMLHttpRequest 2](#3-xmlhttprequest-2)
+- [4.fetch](#4fetch)
+- [5. Referencias](#5-referencias)
+
+---
+
+# 1. Introducción
+
 
 Para realizar peticiones asíncronas y obtener datos desde un servidor podemos hacer uso de 3 técnicas:
 
@@ -23,7 +34,7 @@ Un agente crea una petición HTTP de origen cruzado cuando solicita un recurso d
 
 
 
-## XMLHttpRequest
+# 2. XMLHttpRequest
 
 Cuando apareció por primera vez la clase XMLHttpRequest, ésta estaba orientada a la petición de datos en formato XML, JSON o HTML.
 
@@ -41,7 +52,7 @@ xhr.send();
 ```
 
 
-## XMLHttpRequest 2
+# 3. XMLHttpRequest 2
 
 Con la versión 2 además se pueden hacer petición de datos binarios (**blob** - Binary Large OBjects). Además con esta versión se simplifica la forma de uso.
 
@@ -125,7 +136,7 @@ xhr.send();
 </html>
 ```
 
-## fetch
+# 4.fetch
 
 El método **fetch** nos proporciona una forma más moderna de hacer peticiones asíncronas, en la cual trabajamos con promesas (Promises).
 
@@ -228,7 +239,7 @@ Para el siguiente ejemplo, necesitarás obtener una API Key desde https://thedog
 
 > **NOTA:** El método `fetch` forma parte de la `API Fetch` que también incluye a las interfaces [`Request`](https://developer.mozilla.org/es/docs/Web/API/Request), [`Response`](https://developer.mozilla.org/es/docs/Web/API/Response) y [`Headers`](https://developer.mozilla.org/es/docs/Web/API/Headers).
 
-## Referencias
+# 5. Referencias
 
 - [XMLHttpRequest 2](https://www.html5rocks.com/en/tutorials/file/xhr2/)
 - [API Fetch](https://developer.mozilla.org/es/docs/Web/API/Fetch_API)
