--- a/08.APIS.md
+++ b/08.APIS.md
@@ -1,4 +1,23 @@
-# APIS
+# APIS <!-- omit in toc -->
+
+- [1. Introducción](#1-introducción)
+- [2. DOM](#2-dom)
+- [3. fetch](#3-fetch)
+- [4. WebSockets](#4-websockets)
+- [5. Web Storage](#5-web-storage)
+- [6. Fullscreen](#6-fullscreen)
+- [7. Vibration](#7-vibration)
+- [8. WebRTC](#8-webrtc)
+- [9. Canvas](#9-canvas)
+- [10. WebGL](#10-webgl)
+- [11. Picture in Picture](#11-picture-in-picture)
+- [12. Speech](#12-speech)
+- [13. Referencias](#13-referencias)
+
+
+---
+
+# 1. Introducción
 
 > Actualizado: Octubre 2023
 
@@ -9,7 +28,7 @@
 
 <hr>
 
-## DOM
+# 2. DOM
 
 **Document Object Model**
 
@@ -23,7 +42,7 @@ Los nodos también pueden tener controladores de eventos adjuntos. Una vez que s
 
 <hr>
 
-## fetch
+# 3. fetch
 
 **El método fetch() inicia el proceso de obtener un recurso de la red, devolviendo una promesa que se cumple una vez que la respuesta está disponible.**
 
@@ -33,7 +52,7 @@ La API Fetch proporciona una interfaz para obtener recursos (incluso a través d
 
 <hr>
 
-## WebSockets
+# 4. WebSockets
 
 **Permite a un servidor enviar mensajes al cliente**
 
@@ -43,7 +62,7 @@ WebSockets es una tecnología avanzada que hace posible abrir una sesión de com
 
 <hr>
 
-## Web Storage
+# 5. Web Storage
 
 **Almacenamiento de datos en el cliente**
 
@@ -58,7 +77,7 @@ Los dos mecanismos en el almacenamiento web son los siguientes:
 
 <hr>
 
-## Fullscreen
+# 6. Fullscreen
 
 **Presentación a pantalla completa en el cliente**
 
@@ -68,7 +87,7 @@ La API fullscreen proporciona una manera fácil de presentar contenido web usand
 
 <hr>
 
-## Vibration
+# 7. Vibration
 
 **Ofrece funcionalidad de vibración en dispositivos que lo soporten, como teléfonos móviles**
 
@@ -78,7 +97,7 @@ La mayoría de los dispositivos modernos pueden vibrar a través del hardware, e
 
 <hr>
 
-## WebRTC
+# 8. WebRTC
 
 **Web real-time communications o comunicaciones web en tiempo real**
 
@@ -88,7 +107,7 @@ WebRTC es una tecnología que permite a aplicaciones y sitios web capturar y opc
 
 <hr>
 
-## Canvas
+# 9. Canvas
 
 **Proporciona un medio para dibujar gráficos a través de JavaScript y el elemento HTML `<canvas>`.**
 
@@ -101,7 +120,7 @@ La API de Canvas es extremadamente poderosa, pero no siempre es fácil de usar. 
 
 <hr>
 
-## WebGL
+# 10. WebGL
 
 **Permite representar gráficos 3D y 2D interactivos de alto rendimiento dentro de cualquier navegador web compatible sin el uso de complementos.**
 
@@ -112,7 +131,7 @@ La compatibilidad con WebGL está presente en todos los navegadores modernos; si
 <hr>
 
 
-## Picture in Picture
+# 11. Picture in Picture
 
 **Permite a los sitios web crear una ventana de vídeo flotante y siempre visible.**
 
@@ -123,7 +142,7 @@ Esto permite a los usuarios seguir consumiendo medios mientras interactúan con 
 <hr>
 
 
-## Speech
+# 12. Speech
 
 **Permite incorporar datos de voz en aplicaciones web.**
 
@@ -136,7 +155,7 @@ La API Web `Speech` tiene dos partes:
 
 <hr>
 
-## Referencias
+# 13. Referencias
 
 - [MDN - Introducción a las APIs](https://developer.mozilla.org/es/docs/Learn/JavaScript/Client-side_web_APIs/Introduction)
 - [MDN - Referencia de APIs](https://developer.mozilla.org/es/docs/Web/API)
