--- a/05.OBJETOS.md
+++ b/05.OBJETOS.md
@@ -1,6 +1,29 @@
+# OBJETOS <!-- omit in toc -->
 
+- [1. Introducción](#1-introducción)
+  - [1.1. Date](#11-date)
+  - [1.2. RegExp (Expresiones Regulares)](#12-regexp-expresiones-regulares)
+    - [1.2.1. Desestructuración](#121-desestructuración)
+    - [1.2.2. Operador de expansión ...](#122-operador-de-expansión-)
+  - [1.3. Hacer copia de un objeto](#13-hacer-copia-de-un-objeto)
+    - [1.3.1. Copia superficial (`Object.assign`)](#131-copia-superficial-objectassign)
+    - [1.3.2. Copia superficial (Operador de expansión `...`)](#132-copia-superficial-operador-de-expansión-)
+    - [1.3.3. Copia profunda (`JSON.parse` y `JSON.stringify`)](#133-copia-profunda-jsonparse-y-jsonstringify)
+    - [1.3.4. Serialización](#134-serialización)
+    - [1.3.5. Copia profunda (`structuredClone`)](#135-copia-profunda-structuredclone)
+  - [1.4. Propiedades y métodos](#14-propiedades-y-métodos)
+  - [1.5. Definir nuevas "clases"](#15-definir-nuevas-clases)
+    - [1.5.1. Utilizando prototipos](#151-utilizando-prototipos)
+    - [1.5.2. Utilizando la palabra clave `class`](#152-utilizando-la-palabra-clave-class)
+  - [1.6. Objetos predefinidos](#16-objetos-predefinidos)
+    - [1.6.1. Objeto window](#161-objeto-window)
+    - [1.6.2. Objeto navigator](#162-objeto-navigator)
+    - [1.6.3. Objeto document](#163-objeto-document)
+    - [1.6.4. Objeto console](#164-objeto-console)
 
-# Objetos
+---
+
+# 1. Introducción
 
 En este apartado profundizamos en el trabajo con objetos.
 
@@ -33,7 +56,7 @@ let h = {};              // objeto object
 ```
 
  
-## Date
+## 1.1. Date
 
 Para trabajar con fechas debemos crear un objeto de la clase Date. 
 
@@ -114,7 +137,7 @@ let horaSinMS = s1.split('T')[1].split('.')[0]
 
 
 
-## RegExp (Expresiones Regulares)
+## 1.2. RegExp (Expresiones Regulares)
 
 Las expresiones regulares es un asunto de cierta complejidad. En las referencias tienes un desarrollo detallado. Una expresión regular no es más que un patrón de texto.
 
@@ -219,7 +242,7 @@ email.test ('pepe_lopez@ventas/tienda.com');  // false
 >  - https://es.wikipedia.org/wiki/Expresi%C3%B3n_regular
 
 
-### Desestructuración
+### 1.2.1. Desestructuración
 
 Se representa con **{  }**, **permite desempacar propiedades de objetos en distintas variables**.
 
@@ -258,7 +281,7 @@ console.log(usuarioId(usuario)); // 42
 ```
 
 
-### Operador de expansión ...
+### 1.2.2. Operador de expansión ...
 
 También llamado **spread operator** y representado por 3 puntos **...**, **permite expandir (sacar del objeto) las propiedades**.
 
@@ -289,7 +312,7 @@ console.log(obj3) // { nombre: "juan", edad: 42, peso: 73 }
 ```
 
 
-## Hacer copia de un objeto 
+## 1.3. Hacer copia de un objeto 
 
 Tenemos el siguiente objeto del que deseamos realizar una copia:
 
@@ -309,7 +332,7 @@ let persona = { nombre:"José",  edad:30,  direccion: {calle: "antigua", num: 1}
 >
 >``
 
-### Copia superficial (`Object.assign`)
+### 1.3.1. Copia superficial (`Object.assign`)
 
 ```javascript
 let persona = { nombre:"José",  edad:30,  direccion: {calle: "antigua", num: 1} };
@@ -326,7 +349,7 @@ copia_superficial.direccion.calle = "nueva";
 persona.direccion.calle;         // "nueva" 
 ```
 
-### Copia superficial (Operador de expansión `...`)
+### 1.3.2. Copia superficial (Operador de expansión `...`)
 
 Existe **una forma más moderna** de realizar la copia superficial, y es usando el operador de expansion:
 
@@ -342,7 +365,7 @@ copia_superficial.direccion.calle = "nueva";
 persona.direccion.calle;         // "nueva" 
 ```
 
-### Copia profunda (`JSON.parse` y `JSON.stringify`)
+### 1.3.3. Copia profunda (`JSON.parse` y `JSON.stringify`)
 
 Para un clonado profundo, necesitamos usar otra alternativa ya que Object.assign() copia valores de propiedades. Si el valor en la fuente es una referencia a un objeto, solo se copia la referencia en sí, como valor de la propiedad.
 
@@ -377,7 +400,7 @@ persona.direccion.calle;      // "antigua";
 > Ni JSONC ni JSON5 están estándarizados.
 
 
-### Serialización
+### 1.3.4. Serialización
 
 Aprovechamos la ocasión de haber visto previamente las funciones **`JSON.stringify()`** y **`JSON.parse()`** para hablar de la serialización.
 
@@ -409,7 +432,7 @@ La deserialización es necesaria en los siguientes escenarios:
 - Al leer información en un archivo
 
 
-### Copia profunda (`structuredClone`)
+### 1.3.5. Copia profunda (`structuredClone`)
 
 Existe **una forma más moderna** de realizar la copia profunda, y es usando la función `structuredClone`:
 
@@ -426,7 +449,7 @@ persona.direccion.calle;      // "antigua";
 
 
 
-## Propiedades y métodos
+## 1.4. Propiedades y métodos
 
 Los objetos tienen propiedades y métodos.
 
@@ -451,9 +474,9 @@ persona.saluda('Buenos días');  // Buenos días, me llamo José
 ```
 
 
-## Definir nuevas "clases"
+## 1.5. Definir nuevas "clases"
 
-### Utilizando prototipos
+### 1.5.1. Utilizando prototipos
 
 El lenguaje Javascript es un **lenguaje basado en prototipos**, donde no hay clases explícitas y los objetos heredan directamente de otros objetos. Ésta es su forma de implementar la Programación Orientada a Objetos.
 
@@ -486,7 +509,7 @@ juan.saluda ('Hola');
 pepe.saluda ('Buenos días');
 ```
 
-### Utilizando la palabra clave `class`
+### 1.5.2. Utilizando la palabra clave `class`
 
 Sólo disponible a partir de ES6. Es azúcar sintáctico, puesto que en el fondo Javascript sigue siendo un lenguaje basado en prototipos.
 
@@ -523,10 +546,10 @@ let pepe = new Persona ('José', 1.70, 100);
 >- https://medium.com/@parsyval/javascript-prototype-vs-class-a7015d5473b
  
 
-## Objetos predefinidos
+## 1.6. Objetos predefinidos
 
 
-### Objeto window
+### 1.6.1. Objeto window
 
 Cuando trabajamos con el navegador web, el principal objeto es **window**, el cual posee innumerables propiedades y métodos.
 
@@ -574,7 +597,7 @@ window.document.title
 
 
 
-### Objeto navigator
+### 1.6.2. Objeto navigator
 
 Nos permite acceder a las propiedades y métodos del navegador web.
 
@@ -605,7 +628,7 @@ getLocation();
 ```
 
 
-### Objeto document
+### 1.6.3. Objeto document
 
 A través de este objeto accedemos al **DOM (Document Object Model)**, el cual es un modelo del documento actual. De esta manera podemos acceder a cualquier elemento del documento y modificar su contenido.
 
@@ -663,7 +686,7 @@ document.getElementById('boton').addEventListener ('click', function(){
 ```
 
 
-### Objeto console
+### 1.6.4. Objeto console
 
 Se utiliza para mostrar mensajes por consola.
 
