--- a/02.SINTAXIS.md
+++ b/02.SINTAXIS.md
@@ -709,6 +709,23 @@ true && "texto" // "texto"
 > Number.isNaN( NaN )  // true
 > ```
 
+## 7.4. Conversión a booleano
+
+Cualquier literal, constante o variable puede convertirse a booleano usando la función **Boolean**.
+
+```js
+Boolean("")   // false
+Boolean({})   // true
+Boolean([])   // true
+```
+
+También se puede usar la **[doble negación](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/Logical_NOT#double_not_!!)**:
+
+```js
+!!""          // false
+!!{}          // true
+!![]          // true
+```
 
 
 # 8. Referencias
