--- a/02.SINTAXIS.md
+++ b/02.SINTAXIS.md
@@ -24,7 +24,9 @@
   - [7.1. Falsy](#71-falsy)
   - [7.2. Nullish](#72-nullish)
   - [7.3. Truthy](#73-truthy)
+  - [7.4. Conversión a booleano](#74-conversión-a-booleano)
 - [8. Referencias](#8-referencias)
+
 
 
 ---
